--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 class="max-w-full mx-auto"
               />
               <span
-                class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125"
+                class="absolute -bottom-20 -z-10 left-1/2 -translate-x-1/2 sm:scale-125 md:scale-150"
               >
                 <svg
                   width="400"
@@ -141,7 +141,7 @@
                   <path
                     fill="oklch(76.8% 0.233 130.85)"
                     d="M42.1,-18.9C46.4,-0.5,36,17.5,23.8,24.4C11.5,31.4,-2.7,27.3,-16.2,18.4C-29.7,9.5,-42.5,-4.2,-39.7,-20.6C-36.9,-37.1,-18.4,-56.2,0.2,-56.2C18.9,-56.3,37.8,-37.4,42.1,-18.9Z"
-                    transform="translate(100 100) scale(2)"
+                    transform="translate(100 100) scale(1.6)"
                   />
                 </svg>
               </span>
